fixed issue where form without title wouldnt have sufficient spacing at top

--- a/app/components/form/_form.scss
+++ b/app/components/form/_form.scss
@@ -2,9 +2,9 @@
 // Base form
 // -----------------------------------------------------------------------------
 .form {
-    // margin-top: 1em;
+    // margin-top: 3em;
     .form__input {
-        margin-top: 2em;
+        padding-top: 2em;
         margin-bottom: -.5em;
         // padding-top: 2em;
         // background: tomato;
